5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1679_1103.log
== TEST (2019-05-02 08:50:24) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:50:46) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")

-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:59:17) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a,"," b)
else:
	print(x, "nao pertence ao intervalo", a,"," b)
-- ERROR:
File "XXXX", line 7
    print(x, "pertence ao intervalo", a,"," b)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:00:04) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a, b)
else:
	print(x, "nao pertence ao intervalo", a, b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:00:29) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a, b)
else:
	print(x, "nao pertence ao intervalo", a, b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:00:51) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a, b)
else:
	print(x, "nao pertence ao intervalo", a, b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:01:30) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a, b)
else:
	print(x, "nao pertence ao intervalo", a, b)
-- EXECUTION TIME:
0.142835
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:02:03) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a',' b)
else:
	print(x, "nao pertence ao intervalo", a',' b)
-- ERROR:
File "XXXX", line 7
    print(x, "pertence ao intervalo", a',' b)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:12:12) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a,b)
else:
	print(x, "nao pertence ao intervalo", a,b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:13:22) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a "," b)
else:
	print(x, "nao pertence ao intervalo", a ',' b)
-- ERROR:
File "XXXX", line 7
    print(x, "pertence ao intervalo", a "," b)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:14:13) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a . b)
else:
	print(x, "nao pertence ao intervalo", a . b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(x, "nao pertence ao intervalo", a . b)
AttributeError: 'float' object has no attribute 'b'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:14:59) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a  b)
else:
	print(x, "nao pertence ao intervalo", a  b)
-- EXECUTION TIME:
0.138996
-- ERROR:
  File "/home/codebench/codes/1679/1103/main.py", line 7
    print(x, "pertence ao intervalo", a  b)
                                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:31:16) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a ,",", b)
else:
	print(x, "nao pertence ao intervalo", a , b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:31:32) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a ,",", b)
else:
	print(x, "nao pertence ao intervalo", a ,",", b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:31:46) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a ,",", b)
else:
	print(x, "nao pertence ao intervalo", a ,",", b)
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:31:56) 
-- CODE:
x=float(input("valor x: "))
a=float(input("valor a: "))
b=float(input("valor b: "))
if(b<=a):
	print("Entradas", a, "e", b, "invalidas")
elif((x>=a)and(x<=b)):
	print(x, "pertence ao intervalo", a ,",", b)
else:
	print(x, "nao pertence ao intervalo", a ,",", b)
-- EXECUTION TIME:
0.117635
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
